tests/baselines/reference/optionalBindingParametersInOverloads2.errors.txt
tests/cases/conformance/es6/destructuring/optionalBindingParametersInOverloads2.ts(8,5): error TS2345: Argument of type '{ x: 真假; y: 数字; z: ""; }' is not assignable to parameter of type '{ x: 文字; y: 数字; z: 真假; }'.
  Types of property 'x' are incompatible.
    Type '真假' is not assignable to type '文字'.


==== tests/cases/conformance/es6/destructuring/optionalBindingParametersInOverloads2.ts (1 errors) ====
    function foo({ x, y, z }?: { x: string; y: number; z: boolean });
    function foo(...rest: any[]) {
    
    }
    
    foo({ x: "", y: 0, z: false });
    
    foo({ x: false, y: 0, z: "" });
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ x: 真假; y: 数字; z: ""; }' is not assignable to parameter of type '{ x: 文字; y: 数字; z: 真假; }'.
!!! error TS2345:   Types of property 'x' are incompatible.
!!! error TS2345:     Type '真假' is not assignable to type '文字'.